--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,7 +10,13 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.XiamenTourismApplication">
         <activity
-            android:name=".MainActivity"
+            android:name=".NavigationActivity"
+            android:exported="false" />
+        <!-- <activity -->
+        <!-- android:name=".LoginActivity" -->
+        <!-- android:exported="false" /> -->
+        <activity
+            android:name=".LoginActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
