--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,6 +40,7 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
     implementation 'io.github.ParkSangGwon:tedpermission-normal:3.3.0'
+    implementation 'com.makeramen:roundedimageview:2.3.0'
 
 
 }
